Updated Docker_Compose file
Updated Docker_Compose file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,30 +1,29 @@
 version: "3"
-services:
-	hub:
-		image: selenium/hub:3.14
-		ports:
-			= "4444:4444"
-			
-	chrome:
-		image: selenium/node-chrome:3.14
-		depends_on:
-			- hub
-		environment:
-			- HUB_HOST=hub
-	firefox:
-		image: selenium/node-firefox:3.14
-		shm_size: '1gb'
-		depends_on:
-			- hub
-		environment:
-			- HUB_HOST=hub
+services: 
+    hub: 
+        image: selenium/hub:latest
+        ports:
+            - "4444:4444"
+    chrome:
+        image: selenium/node-chrome:beta
+        depends_on:
+            - hub
+        environment:
+            - HUB_HOST=hub
+    firefox:
+        image: selenium/node-firefox:beta
+        shm_size: '1gb'
+        depends_on:
+            - hub
+        environment:
+            - HUB_HOST=hub
     search-module:
         image: 8049376624/selenium-docker
         depends_on:
-			- chrome
+            - chrome
             - firefox
-		environment:
-			- HUB_HOST=hub
+        environment:
+            - HUB_HOST=hub
             - BROWSER=chrome
             - MODULE=testng.xml
         volumes:
